[workspace]
members = ["pgdo-cli", "pgdo-lib", "pgdo-test", "pgdo-test-macros"]
resolver = "2"

[workspace.package]
authors = ["Gavin Panella <gavin@allenap.me>"]
categories = [
    "command-line-utilities",
    "database",
    "development-tools",
    "development-tools::testing",
]
edition = "2021"
keywords = ["database", "postgres", "postgresql"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/allenap/pgdo"
version = "0.4.2"
