[package]
authors.workspace = true
categories.workspace = true
description = "The convenience of SQLite – but with PostgreSQL (Command-line application)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo-cli"
readme = "README.md"
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "pgdo"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.23", features = ["derive", "env"] }
console = "=0.15.8"
ctrlc = { version = "=3.4.5", features = ["termination"] }
either = "=1.13.0"
fs_extra = "=1.3.0"
indicatif = "=0.17.9"
log = "=0.4.22"
miette = { version = "=7.4.0", features = ["fancy"] }
pgdo-lib = { version = "=0.5.1", path = "../pgdo-lib" }
shell-quote = "=0.7.1"
simple_logger = "=5.0.0"
tempfile = "=3.14.0"
thiserror = "=2.0.6"
uuid = { version = "=1.11.0", features = ["v5"] }

[dependencies.tokio]
version = "=1.42.0"
features = ["parking_lot", "rt-multi-thread"]
default-features = false
