[package]
authors.workspace = true
categories.workspace = true
description = "The convenience of SQLite – but with PostgreSQL (Command-line application)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo-cli"
readme = "README.md"
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "pgdo"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.6.1", features = ["derive", "env"] }
console = "=0.16.3"
ctrlc = { version = "=3.5.2", features = ["termination"] }
either = "=1.15.0"
fs_extra = "=1.3.0"
indicatif = "=0.18.4"
log = "=0.4.29"
miette = { version = "=7.6.0", features = ["fancy"] }
pgdo-lib = { version = "=0.5.6", path = "../pgdo-lib" }
shell-quote = "=0.7.2"
simple_logger = "=5.2.0"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
uuid = { version = "=1.23.1", features = ["v5"] }

[dependencies.tokio]
version = "=1.52.3"
features = ["parking_lot", "rt-multi-thread"]
default-features = false
