[package]
authors.workspace = true
categories.workspace = true
description = "The convenience of SQLite – but with PostgreSQL (Library package)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo-lib"
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
name = "pgdo"
path = "src/lib.rs"

[dependencies]
either = "1.13.0"
glob = "0.3.1"
globset = "0.4.15"
lazy_static = "1.5.0"
log = "0.4.22"
miette = "7.4.0"
nix = { version = "0.29.0", features = ["fs", "user"] }
postgres = "0.19.9"
postgres-protocol = "0.6.7"
rand = "0.8.5"
regex = "1.11.1"
shell-quote = "0.7.1"
tempfile = "3.14.0"
thiserror = "1.0.69"
tokio-stream = "0.1.17"
url = "2.5.4"
uuid = { version = "1.11.0", features = ["v5"] }

[dependencies.sqlx]
version = "0.8.2"
features = ["macros", "postgres", "runtime-tokio"]
default-features = false

[dependencies.tokio]
version = "1.42.0"
features = ["parking_lot", "rt-multi-thread"]
default-features = false

[dev-dependencies]
async-std = "1.13.0"
paste = "1.0.15"
pgdo-test = { path = "../pgdo-test" }
rand = "0.8.5"
tempfile = "3"
