[package]
authors.workspace = true
categories.workspace = true
description = "The convenience of SQLite – but with PostgreSQL (Library package)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo-lib"
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
name = "pgdo"
path = "src/lib.rs"

[dependencies]
either = "1.15.0"
glob = "0.3.3"
globset = "0.4.16"
log = "0.4.27"
miette = "7.6.0"
nix = { version = "0.30.1", features = ["fs", "user"] }
postgres = "0.19.10"
postgres-protocol = "0.6.8"
rand = "0.9.2"
regex = "1.11.1"
shell-quote = "0.7.2"
tempfile = "3.20.0"
thiserror = "2.0.15"
tokio-stream = "0.1.17"
url = "2.5.4"
uuid = { version = "1.18.0", features = ["v5"] }

[dependencies.sqlx]
version = "0.8.6"
features = ["macros", "postgres", "runtime-tokio"]
default-features = false

[dependencies.tokio]
version = "1.47.1"
features = ["parking_lot", "rt-multi-thread"]
default-features = false

[dev-dependencies]
async-std = "1.13.1"
paste = "1.0.15"
pgdo-test = { path = "../pgdo-test" }
rand = "0.9.2"
tempfile = "3"
