[package]
authors.workspace = true
categories.workspace = true
description = "The convenience of SQLite – but with PostgreSQL (Library package)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo-lib"
readme = "README.md"
repository.workspace = true
version.workspace = true

[lib]
name = "pgdo"
path = "src/lib.rs"

[dependencies]
backoff = "0.4.0"
either = "1.15.0"
glob = "0.3.3"
globset = "0.4.18"
log = "0.4.29"
miette = "7.6.0"
nix = { version = "0.31.2", features = ["fs", "user"] }
postgres = "0.19.13"
postgres-protocol = "0.6.11"
rand = "0.10.1"
regex = "1.12.3"
shell-quote = "0.7.2"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio-stream = "0.1.18"
url = "2.5.8"
uuid = { version = "1.23.1", features = ["v5"] }

[dependencies.sqlx]
version = "0.8.6"
features = ["macros", "postgres", "runtime-tokio"]
default-features = false

[dependencies.tokio]
version = "1.52.1"
features = ["parking_lot", "rt-multi-thread"]
default-features = false

[dev-dependencies]
async-std = "1.13.2"
paste = "1.0.15"
pgdo-test = { path = "../pgdo-test" }
tempfile = "3"
