[package]
authors.workspace = true
categories.workspace = true
description = "The convenience of SQLite – but with PostgreSQL (Testing package)"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo-test"
readme = "README.md"
repository.workspace = true
version.workspace = true

# Don't accidentally publish this crate.
publish = false

[lib]
name = "pgdo_test"
path = "src/lib.rs"

[dependencies]
async-std = "1.12.0"
pgdo-test-macros = { path = "../pgdo-test-macros" }

[dependencies.sqlx]
version = "0.8.1"
features = ["macros", "postgres", "runtime-tokio"]
default-features = false
