[package]
authors.workspace = true
categories.workspace = true
description = "Easily create and manage PostgreSQL clusters on demand for testing and development."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo"
readme.workspace = true
repository.workspace = true
version = "0.5.0"

[lib]
name = "pgdo"
path = "src/lib.rs"

[[bin]]
doc = false
name = "pgdo"
path = "src/main.rs"

[dependencies]
clap = { version = "^4.1.6", features = ["derive", "env"] }
color-eyre = "^0.6.2"
ctrlc = { version = "^3.2.5", features = ["termination"] }
either = "^1.8.1"
glob = "^0.3.1"
lazy_static = "^1.4.0"
nix = "^0.27.1"
postgres = "^0.19.4"
postgres-protocol = "^0.6.4"
rand = "^0.8.5"
regex = "^1.7.1"
shell-quote = "^0.3.0"
uuid = { version = "^1.3.0", features = ["v5"] }

[dev-dependencies]
rand = "0.8.5"
tempdir = "^0.3.7"
