[package]
authors.workspace = true
categories.workspace = true
description = "Easily create and manage PostgreSQL clusters on demand for testing and development."
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "pgdo"
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
doc = false
name = "pgdo"
path = "src/main.rs"

[dependencies]
pgdo-lib = { path = "../pgdo-lib" }
clap = { version = "4.4.6", features = ["derive", "env"] }
color-eyre = "0.6.2"
ctrlc = { version = "3.4.1", features = ["termination"] }
uuid = { version = "1.4.1", features = ["v5"] }
